fix weird shift

--- a/docs/css/dashboard-header.css
+++ b/docs/css/dashboard-header.css
@@ -1,6 +1,6 @@
 /* Header navigation container */
 .header-container {
-    width: 98%;
+    width: 100%;
     height: 50px;
     display: flex;
     margin-bottom: 20px;
